[project]
name = "yt-cc-music"
version = "0.1.0"
description = ""
authors = [
    {name = "errolelliott",email = "ezzy.elliott@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp (>=2025.6.25,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
